<resources>
    <string name="app_name">Moon Digital Pay</string>

    <string name="select_Action">Select Action</string>
    <string name="select_photo_from_gallery">select photo from gallery</string>
    <string name="capture_photo_from_camera">Capture photo from camera</string>

    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>

    <string name="cameraTitle">Camera</string>
    <string name="galleryTitle">Gallery</string>
    <string name="image_selection">Image Selection</string>
    <string name="from_where_you_want_to_pick_this_image">From where you want to pick this image?</string>

    <string name="full_name">Full Name</string>
    <string name="email_id">Email ID</string>
    <string name="referral_code_optional">Referral Code (optional)</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="address">Address</string>
    <string name="signup">Signup</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="login_here">Login here</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="forgot_password_">Forgot Password</string>
    <string name="recover_here">Recover here</string>
    <string name="don_t_have_an_account">Don\'t have an account ?</string>
    <string name="done">Done</string>
    <string name="sign_in_to_your_naccount">Sign in to Your\nAccount</string>
    <string name="sign_in_to_your_account">Sign in to Your Account</string>
    <string name="sign_in">Sign In</string>
    <string name="signin">Signin</string>
    <string name="signup_your_account">Signup your account</string>
    <string name="register">Register</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="forgot_password_your_account">Forgot Password Your Account</string>
    <string name="_3000">₹ 3000</string>
    <string name="_199">₹ 199</string>
    <string name="add_money">Add Money</string>
    <string name="transfer">Transfer</string>
    <string name="reports">Reports</string>
    <string name="margin">Margin</string>
    <string name="wallet_balance">Wallet Balance</string>
    <string name="_0000">₹ 0000</string>
    <string name="rs">₹</string>
    <string name="mobile_recharge">Mobile Recharge</string>
    <string name="tv_recharge">TV Recharge</string>
    <string name="my_profile">My Profile</string>
    <string name="recharge_history">Recharge History</string>
    <string name="load_wallet">Load Wallet</string>
    <string name="wallet">Wallet</string>
    <string name="change_password">Change Password</string>
    <string name="complaints">Complaints</string>
    <string name="supports">Supports</string>
    <string name="menu">Menu</string>
    <string name="news">News</string>
    <string name="setting">Setting</string>
    <string name="logout">Logout</string>
    <string name="enter_address">Enter address</string>
    <string name="enter_password">Enter password</string>
    <string name="your_referral_code">Enter referral code</string>
    <string name="enter_mobile_number">Enter mobile number</string>
    <string name="enter_mail_id">Enter mail id</string>
    <string name="enter_full_name">Enter full name</string>
    <string name="enter_otp">Enter otp</string>
    <string name="otp">OTP</string>
    <string name="please_enter_full_name">Please enter full name</string>
    <string name="please_enter_your_email_id">Please enter your email id</string>
    <string name="please_enter_your_mobile_number">Please enter your mobile number</string>
    <string name="please_enter_your_password">Please enter your password</string>
    <string name="please_enter_your_address">Please enter your address</string>
    <string name="please_enter_your_otp">Please enter your otp</string>
    <string name="please_enter_old_password">Please enter your old password</string>
    <string name="please_enter_new_password">Please enter your new password</string>
    <string name="please_enter_confirm_password">Please enter your confirm password</string>
    <string name="confirm_password_does_not_match_with_password">Password and confirm password do not match.</string>
    <string name="net_connection">Please check your internet connection</string>
    <string name="cancel">Cancel</string>
    <string name="are_you_sure_you_want_to_logout">Are you sure you want to logout?</string>
    <string name="verify_otp">Verify OTP</string>
    <string name="wallet_balance_">Wallet balance</string>
    <string name="dth_number">DTH Number</string>
    <string name="enter_dth_number">Enter DTH Number</string>
    <string name="select_operator">Select Operator</string>
    <string name="operator_name">Operator Name</string>
    <string name="change">Change</string>
    <string name="recharge_amount">Recharge Amount</string>
    <string name="amount">Amount</string>
    <string name="submit">Submit</string>
    <string name="_181_15gb_data_30_din_tak_xstream_play_30d">181 = 15GB data, 30 din tak, Xstream Play,30D</string>
    <string name="get_xstream_play_for_30_days">Get Xstream Play for 30 Days,</string>
    <string name="_181">181</string>
    <string name="data_not_found">Data Not Found</string>
    <string name="select_circle">Select Circle</string>
    <string name="plan_details">Plan Details</string>
    <string name="please_select_operator">Please Select Operator</string>
    <string name="customer_offer">Customer Offer</string>
    <string name="please_select_plan">Please select plan</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="go">Go</string>
    <string name="please_enter_amount">Please enter amount</string>
    <string name="my_earnings">My Earnings</string>
    <string name="txn_no">Txn No.</string>
    <string name="failed">Failed</string>
    <string name="opening_balance">opening balance:</string>
    <string name="closing_balance">Closing Balance:</string>
    <string name="_2024_09_06_08_00_45">2024-09-06 08:00:45</string>
    <string name="_10_00">₹ 10.00</string>
    <string name="your_mobile_recharge_of_10_has_failed_of_operator_jio_of_bl_mandawaliya">Your Mobile Recharge of ₹ 10 has failed of Operator Jio of BL Mandawaliya</string>
    <string name="_9900887766">9900887766</string>
    <string name="credit">Credit</string>
    <string name="success">Success</string>
    <string name="available_balance">Available Balance</string>
    <string name="no_data">No Data</string>
    <string name="my_earning">My Earning</string>
    <string name="total_nrecharge">Total\nRecharge</string>
    <string name="total_nearning">Total\nEarning</string>
    <string name="_7_days_nearning">7 Days\nEarning</string>
    <string name="_30_days_nearning">30 days\nEarning</string>

</resources>