<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SignUpActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_160sdp"
        android:background="@drawable/ic_bg_app_sign_in"
        android:orientation="vertical"
        android:padding="@dimen/_10sdp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ivBackClick"
                android:layout_width="@dimen/_35sdp"
                android:layout_height="@dimen/_35sdp"
                android:padding="@dimen/_5sdp"
                android:src="@drawable/ic_arrow_left" />

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/TextView_bold"
                android:layout_marginTop="@dimen/_5sdp"
                android:text="@string/signup"
                android:textColor="@color/white"
                android:textSize="@dimen/_34ssp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/TextView_medium"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:text="@string/signup_your_account"
                android:textColor="@color/white"
                android:textSize="@dimen/_12ssp" />

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="@dimen/_70sdp"
                android:layout_height="@dimen/_40sdp"
                android:layout_gravity="center"
                android:src="@drawable/ic_app_logo" />
        </LinearLayout>
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/_10sdp">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/TextInputLayoutAppearance"
                android:layout_marginTop="@dimen/_10sdp"
                android:hint="@string/full_name">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etFullName"
                    style="@style/Edittext"
                    android:hint="@string/enter_full_name"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/TextInputLayoutAppearance"
                android:layout_marginTop="@dimen/_10sdp"
                android:hint="@string/email_id">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etEmailId"
                    style="@style/Edittext"
                    android:hint="@string/enter_mail_id"
                    android:inputType="textEmailAddress" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/TextInputLayoutAppearance"
                android:layout_marginTop="@dimen/_10sdp"
                android:hint="@string/mobile_number">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etMobileNumber"
                    style="@style/Edittext"
                    android:ems="10"
                    android:maxLength="10"
                    android:hint="@string/enter_mobile_number"
                    android:inputType="number" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/TextInputLayoutAppearance"
                android:layout_marginTop="@dimen/_10sdp"
                android:hint="@string/referral_code_optional">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etReferralCode"
                    style="@style/Edittext"
                    android:hint="@string/your_referral_code"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/TextInputLayoutAppearance"
                android:layout_marginTop="@dimen/_10sdp"
                android:hint="@string/password"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etPassword"
                    style="@style/Edittext"
                    android:hint="@string/enter_password"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/TextInputLayoutAppearance"
                android:layout_marginTop="@dimen/_10sdp"
                android:hint="@string/address">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etAddress"
                    style="@style/Edittext"
                    android:hint="@string/enter_address"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnSignUp"
                style="@style/MaterialButton"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/signup" />
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/llLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="@dimen/_10sdp">

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/TextView_regular"
            android:text="@string/already_have_an_account"
            android:textColor="@color/Color6C7278"
            android:textSize="@dimen/_12ssp" />

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/TextView_bold"
            android:padding="@dimen/_3sdp"
            android:text="@string/signin"
            android:textColor="@color/color_red"
            android:textSize="@dimen/_12ssp" />
    </LinearLayout>
</androidx.appcompat.widget.LinearLayoutCompat>