<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_bg_app_sign_in"
            android:orientation="vertical"
            android:padding="@dimen/_10sdp">

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/TextView_bold"
                android:layout_marginTop="@dimen/_20sdp"
                android:text="@string/sign_in_to_your_naccount"
                android:textColor="@color/white"
                android:textSize="@dimen/_34ssp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatTextView
                    style="@style/TextView_medium"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:text="@string/sign_in_to_your_account"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_12ssp" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="@dimen/_70sdp"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_gravity="bottom"
                    android:src="@drawable/ic_app_logo" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/_10sdp">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/TextInputLayoutAppearance"
                android:layout_marginTop="@dimen/_10sdp"
                android:hint="@string/mobile_number">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etMobileNumber"
                    style="@style/Edittext"
                    android:maxLength="10"
                    android:ems="10"
                    android:hint="@string/enter_mobile_number"
                    android:inputType="number" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/TextInputLayoutAppearance"
                android:layout_marginTop="@dimen/_20sdp"
                android:hint="@string/password"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etPassword"
                    style="@style/Edittext"
                    android:hint="@string/enter_password"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvForgotPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:fontFamily="@font/plusjakartasans_bold"
                android:padding="@dimen/_10sdp"
                android:text="@string/forgot_password"
                android:textColor="@color/color_red"
                android:textSize="@dimen/_12ssp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnLogin"
                style="@style/MaterialButton"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/sign_in" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llSignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="@dimen/_10sdp">

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/TextView_medium"
            android:text="@string/don_t_have_an_account"
            android:textColor="@color/Color6C7278"
            android:textSize="@dimen/_12ssp" />

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/TextView_bold"
            android:padding="@dimen/_3sdp"
            android:text="@string/register"
            android:textColor="@color/color_red"
            android:textSize="@dimen/_12ssp" />
    </LinearLayout>
</RelativeLayout>