<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activitys.MyProfileActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center">
        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal">
                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/ivBackProfile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_arrow_left"/>
                <androidx.appcompat.widget.AppCompatTextView
                    style="@style/TextView_medium"
                    android:text="@string/my_profile"
                    android:textSize="@dimen/_16ssp"
                    android:textColor="@color/white"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_gravity="center"
                    android:gravity="center"/>
            </LinearLayout>
        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/_10sdp"
        android:orientation="vertical">
        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="@dimen/_80sdp"
            android:layout_height="@dimen/_80sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:layout_gravity="center"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_app_logo"/>
        <com.google.android.material.textfield.TextInputLayout
            style="@style/TextInputLayoutAppearance"
            android:layout_marginTop="@dimen/_10sdp"
            android:hint="@string/full_name">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etFullNameProfile"
                style="@style/Edittext"
                android:hint="@string/enter_full_name"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            style="@style/TextInputLayoutAppearance"
            android:layout_marginTop="@dimen/_10sdp"
            android:hint="@string/mobile_number">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etMobileNumberProfile"
                style="@style/Edittext"
                android:hint="@string/enter_mobile_number"
                android:inputType="number" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            style="@style/TextInputLayoutAppearance"
            android:layout_marginTop="@dimen/_10sdp"
            android:hint="@string/address">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etAddressProfile"
                style="@style/Edittext"
                android:hint="@string/enter_address"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSubmitProfile"
            style="@style/MaterialButton"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="@string/submit" />
    </LinearLayout>
</LinearLayout>