<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginVertical="@dimen/_5sdp"
    android:layout_marginHorizontal="@dimen/_10sdp"
    app:cardCornerRadius="@dimen/_5sdp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/llRechargeHistoryClick"
        android:orientation="vertical"
        android:padding="@dimen/_10sdp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ivRechargeMobileOperator"
                android:layout_width="@dimen/_40sdp"
                android:layout_height="@dimen/_40sdp"
                android:layout_gravity="center"
                android:src="@drawable/ic_jio_logo"/>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="@dimen/_10sdp"
                android:orientation="vertical">
                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvMobileNumberRecharge"
                    style="@style/TextView_regular"
                    android:text="@string/_9900887766"
                    android:textSize="@dimen/_12ssp"
                    android:textColor="@color/color_blue"/>
                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvMobileNumberDetails"
                    style="@style/TextView_regular"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:text="@string/your_mobile_recharge_of_10_has_failed_of_operator_jio_of_bl_mandawaliya"
                    android:textSize="@dimen/_8ssp"
                    android:textColor="@color/Color1A1C1E"/>
            </LinearLayout>
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvMobileNumberAmount"
                style="@style/TextView_bold"
                android:text="@string/_10_00"
                android:textSize="@dimen/_12ssp"
                android:textColor="@color/Color023270"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginTop="@dimen/_5sdp"
                android:orientation="vertical">
                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvRechargeHistoryTxnNo"
                    style="@style/TextView_semi_bold"
                    android:text="@string/txn_no"
                    android:textSize="@dimen/_10ssp"
                    android:textColor="@color/Color1A1C1E"/>
                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvDateTimeRechargeHistory"
                    style="@style/TextView_regular"
                    android:text="@string/_2024_09_06_08_00_45"
                    android:textSize="@dimen/_10ssp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:textColor="@color/Color1A1C1E"/>
            </LinearLayout>
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvRechargeStatus"
                style="@style/TextView_bold"
                android:text="@string/failed"
                android:layout_gravity="center"
                android:textSize="@dimen/_12ssp"
                android:textColor="@color/errorColor"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:orientation="horizontal">
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvOpenBalanceHistory"
                style="@style/TextView_semi_bold"
                android:text="@string/opening_balance"
                android:layout_gravity="center"
                android:textSize="@dimen/_8ssp"
                android:textColor="@color/Color1A1C1E"/>
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvClosingBalanceHistory"
                style="@style/TextView_semi_bold"
                android:text="@string/closing_balance"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/_10sdp"
                android:textSize="@dimen/_8ssp"
                android:textColor="@color/Color1A1C1E"/>
        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>